
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JAN 06a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_zetaA2(), commented out special treatment for the charged species
      fluxes; now deals with charged species fluxes as other fluxes
    - in find_init_mass_fraction_templates(), fixed a bug related to writing the default control
      file (using the -w flag) when both the O2 and N2 species are present in the chemical solver
      

2023 JAN 05a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_Harten(), condition_Lambda_plus_minus_Peclet(), 
      condition_Lambda_plus_minus_Pascal(), condition_Lambda_plus_minus_Parent(), 
      condition_Lambda_plus_minus_Gnoffo(), removed the eigenvalue conditioning related to zeta2
    - added function condition_Lambda_plus_minus_zetaA2() which conditions the eigenvalues
      to ensure that the eigenvalues of the waves are within same order of magnitude as the 
      spectral radius and, if not, blend them with Steger-Warming Eigenvalues
    - in condition_Lambda_plus_minus(), added a call to condition_Lambda_plus_minus_zetaA2()
  * in tools/chemkin2cfdwarp.c
    - improved the coding related to pointers, reallocs, and mallocs 
      

2023 JAN 02b
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - implemented version 4 of the Adamovich model


2023 JAN 02a
  * in model/fluid/_Favre-Reynolds/fluid_conv.c
    - changed some comments related to EIGENSET
  * in model/fluid/_Navier-Stokes/fluid_conv.c
    - added find_Linv_from_jacvars_eigenset1(), find_L_from_jacvars_eigenset1()
  * in model/fluid/_Navier-Stokes_perfect/fluid_conv.c
    - renamed eigenset 1 to 0, 2 to 1, and 3 to 2